<resources>
    <string name="app_name">Quiescent</string>
    <string name="intro">Welcome to Quiescent.</string>
    <string name="tagline">Need a minute before you go about your day?</string>
    <string name="continueButton">continue —></string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dashboard_frag">Dashboard</string>
    <string name="me_frag">Meditate Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ME_alt">Begin the Mindfulness Exercise</string>
    <string name="ME_tag">Begin the Mindfulness Exercise</string>
    <string name="sched_alt">Scheduler</string>
    <string name="time_title">Timer</string>
    <string name="sched_title">Scheduler</string>
    <string name="time_alt">Timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_title_text">Settings</string>
    <string name="settings_inhale_text">Inhale</string>
    <string name="settings_exhale_text">Exhale</string>
    <string name="settings_hold_text">Hold</string>
    <string name="settings_close_text">Close</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="inner_circle_text">HOLD</string>
    <string name="time_text">00:05:00</string>
    <string name="username">Username</string>
    <string name="hint_text">enter name</string>
    <string name="password_hint">enter password</string>
    <string name="password">Password</string>
    <string name="view_event_btn">VIEW EVENT</string>
    <string name="add_user_btn">ADD USER</string>
    <string name="update_btn">UPDATE</string>
    <string name="delete_name">Enter Name to Delete Data</string>
    <string name="delete_btn">DELETE</string>
    <string name="current_name">Current Name</string>
    <string name="enter_password">enter password</string>
    <string name="new_name">New Name</string>
    <string name="settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="selected">Selected</string>
    <string name="seven_days_of_the_week">7 days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field cannot be empty!</string>
    <string name="time_error">Time field cannot be empty!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="please_set_school_website_url">Please set the URL of your school website in settings.</string>
    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>
    <string name="select">Select</string>
    <string name="homework">Assignment</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="description_dialog">Description:</string>
    <string name="date_error">Date field cannot be empty!</string>
    <string name="edit_homework">Edit assignment</string>
    <string name="add_homework">Add assignment</string>
    <string name="date">Date</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field cannot be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>
    <string name="teachers">Teachers</string>
    <string name="add_teacher">Add teacher</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="add_exam">Add exam</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>
    <string name="enable_seven_days_setting">Enable 7 days of the Week</string>
    <string name="change_school_website_setting">Change school website</string>
    <string name="change_school_website_setting_summary">Change the URL of your school website</string>
    <string name="start_week_on_sunday">Start week on Sunday</string>
    <string name="start_week_on_sunday_summary">Change Even/Odd weeks on Sunday and use Friday and Saturday as weekend.</string>
    <string name="notification_visibility_setting">Show notification</string>
    <string name="notification_show_permanent_setting">Show permanently</string>
    <string name="notification_show_permanent_setting_desc">The notification can only be hidden manually</string>
    <string name="notification_alarm_setting">On fixed time</string>
    <string name="notification_alarm_setting_desc">Show the notification at a specific time</string>
    <string name="notification_reminder_setting">Remind before subject starts</string>
    <string name="notification_reminder_settings_desc">Send a loud notification %s minutes before the subject starts.</string>
    <string name="notification_notification_end_setting">Remind at the end of the subject</string>
    <string name="notification_notification_end_setting_desc">Send a silent notification at the end of the subject to inform you about your next subject.</string>
    <string name="notification_settings">Notification</string>
    <string name="notification_dismiss">Hide</string>
    <string name="permission_request_message">A few permissions are required for this function. To ensure comprehensive functionality, please grant them.</string>
    <string name="permission_required">Authorization is required!</string>
    <string name="permission_required_description">These authorization (s) are required to ensure comprehensive functionality</string>
    <string name="permission_ok_button">Grant\u2026</string>
    <string name="permission_cancel_button">Cancel</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="dont_show_again">Do not show again</string>
    <string name="with_teacher">with</string>
    <string name="share_msg_in_room">in room</string>
    <string name="version">Version</string>
    <string name="backup">Backup</string>
    <string name="description">Description</string>
    <string name="select_start_time">Start</string>
    <string name="select_end_time">End</string>
    <string name="homework_activity_title">Assignment</string>
    <string name="notes_activity_title">Notes</string>
    <string name="exams_activity_title">Exams</string>
    <string name="notification_summary_title">Today\'s lessons:</string>
    <string name="notification_next_week_title">Next lesson</string>
    <string name="nav_drawer_description">Forked from ulan17</string>
    <string name="time_from">from</string>
    <string name="channel">Timetable</string>
    <string name="channel_important">Timetable important</string>
    <string name="channel_desc">A notification about your lessons</string>
    <string name="do_not_disturb_permission_desc">In order to automatically switch to do not disturb mode, the app requires the appropriate authorization</string>
    <string name="do_not_disturb_setting">Automatic Do not disturb</string>
    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects.</string>
    <string name="do_not_disturb_turn_off">Also turning off</string>
    <string name="do_not_disturb_turn_off_desc">Turn do not disturb mode off at the end of the subjects.</string>
    <string name="backup_successful">Backup has been saved to %s</string>
    <string name="backup_failed">Backup failed</string>
    <string name="import_successful">Restore succeeded</string>
    <string name="import_failed">Restore failed</string>
    <string name="restore">Restore</string>
    <string name="no_backup_found_in_downloads">No Backup found in %s</string>
    <string name="Documents">Documents</string>
    <string name="Downloads">Downloads</string>
    <string name="colorPickerDialog_preset">Presets</string>
    <string name="delete_content">Should %s be deleted?</string>
    <string name="delete_week">the subject %s</string>
    <string name="delete_note">the note %s</string>
    <string name="delete_exam">the exam %s</string>
    <string name="delete_everything">Delete everything</string>
    <string name="delete_everything_desc">Should all data in the timetable be irretrievably deleted?
        \nIt is advisable to create a backup beforehand!</string>
    <string name="successfully_deleted_everything">Successfully deleted everything</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_email_app">No email app installed</string>
    <string name="no_navigation_app">No navigation app installed</string>
    <string name="no_calendar_app">No calendar app installed</string>
    <string name="add_to_calendar">Should this event be added to your calendar?</string>
    <string name="choose_theme_setting">Choose theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_auto">Automatic</string>
    <string name="about_libs_title">Open-Source Libraries</string>
    <string name="summary_activity_title">Summary</string>
    <string name="change_summary_library">Change presentation</string>
    <string name="start_of_school">School start (set only on first app start)</string>
    <string name="length_of_period">Duration of your subjects (set only on first app start)</string>
    <string name="minutes">minutes</string>
    <string name="lesson">lesson</string>
    <string name="show_times_instead_of_lessons">Show exact times of subjects</string>
    <string name="show_times_instead_of_lessons_desc">Show the exact times instead of the subject\'s number, e.g. 8:00 instead of 1</string>
    <string-array name="timetable_header">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="reset">RESET</string>
    <string name="start_btn">START</string>
</resources>