<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celadon"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.ScheduleEventFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignBottom="@+id/button"
        android:onClick="viewdata"
        android:text="@string/view_event_btn"
        android:textColor="@color/celadon"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPass"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="23dp"
        android:onClick="addUser"
        android:text="@string/add_user_btn"
        android:textColor="@color/celadon"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="13dp"
        android:onClick="update"
        android:text="@string/update_btn"
        android:textColor="@color/celadon"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2"
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/delete_name"
        android:inputType="textPersonName"
        android:textSize="14dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="41dp"
        android:onClick="delete"
        android:text="@string/delete_btn"
        android:textStyle="normal|bold"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/current_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignTop="@+id/button3"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/new_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <!--
    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/celadon" /> -->
</RelativeLayout>