<?xml version="1.0" encoding="utf-8"?>

<!--
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MeditateFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honeydew"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <View
        android:id="@+id/view_circle_outer"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:background="@drawable/bg_circle_outer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_circle_inner"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_circle_inner"
        app:layout_constraintBottom_toBottomOf="@+id/view_circle_outer"
        app:layout_constraintEnd_toEndOf="@+id/view_circle_outer"
        app:layout_constraintStart_toStartOf="@+id/view_circle_outer"
        app:layout_constraintTop_toTopOf="@+id/view_circle_outer" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inner_circle_text"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_circle_inner"
        app:layout_constraintEnd_toEndOf="@+id/view_circle_inner"
        app:layout_constraintStart_toStartOf="@+id/view_circle_inner"
        app:layout_constraintTop_toTopOf="@+id/view_circle_inner" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_text"
        android:textColor="@color/myrtle_green"
        app:layout_constraintBottom_toTopOf="@+id/view_circle_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pause_resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/myrtle_green"
        android:text="@string/start_btn"
        android:textColor="@color/celadon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_circle_outer"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/myrtle_green"
        android:backgroundTint="@color/myrtle_green"
        android:foregroundTint="@color/myrtle_green"
        android:text="@string/reset"
        android:textColor="@color/celadon"
        android:visibility="invisible"
        tools:visibility= "visible"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="@color/myrtle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pause_resume_button"
        app:rippleColor="@color/myrtle_green" />

</androidx.constraintlayout.widget.ConstraintLayout>